manifests/dev/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: dev
  labels:
    app: api
    environment: dev
spec:
  replicas: 5
  selector:
    matchLabels:
      app: api
      environment: dev
  template:
    metadata:
      labels:
        app: api
        environment: dev
    spec:
      imagePullSecrets: 
      - name: safeops-challenge
      containers:
      - name: api
        image: registry.digitalocean.com/safeops-challenge/api:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 150m
          requests:
            cpu: 80m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: dev
  labels:
    app: web
    environment: dev
spec:
  replicas: 5
  selector:
    matchLabels:
      app: web
      environment: dev
  template:
    metadata:
      labels:
        app: web
        environment: dev
    spec:
      imagePullSecrets: 
      - name: safeops-challenge
      containers:
      - name: web
        image: registry.digitalocean.com/safeops-challenge/web:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 150m
          requests:
            cpu: 80m
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: dev
spec:
  selector:
    app: api
    environment: dev
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: dev
spec:
  selector:
    app: web
    environment: dev
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
