manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^([^.?]*[^\/])$ $1/$2 redirect;
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /dev/api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
      - path: /dev/front(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 3000
